crates/sid-widgets/tests/snapshots/animation_view__animation_view_default_render.snap
---
source: crates/sid-widgets/tests/animation_view.rs
expression: s
---
┌ Animation ───────────────────────────────────────────────┐
│Animation                                                 │
│-----------------------------------------                 │
│> * Enabled                  [on]                         │
│  o Density                  30 / 100                     │
│  o FPS                      8 / 30                       │
│  o Supernova idle (secs)    90                           │
│  o Supernova on event       [on]                         │
│  o Glyph set                Cosmos                       │
│                                                          │
│[ Space/Enter: toggle/cycle ]                             │
│[ Left/Right: decrement/increment ]                       │
│[ S: save ]                                               │
└──────────────────────────────────────────────────────────┘
