crates/sid-widgets/tests/snapshots/animation_view__animation_view_density_focused_at_50.snap
---
source: crates/sid-widgets/tests/animation_view.rs
assertion_line: 205
expression: s
---
Animation                                                   
-----------------------------------------                   
  o Enabled                  [on]                           
> * Density                  50 / 100                       
  o FPS                      8 / 30                         
  o Supernova idle (secs)    90                             
  o Supernova on event       [on]                           
  o Glyph set                Cosmos                         
                                                            
[ Space/Enter: toggle/cycle ]                               
[ Left/Right: decrement/increment ]                         
[ S: save ]
