crates/sid-widgets/tests/snapshots/animation_view__animation_view_render_focused.snap
---
source: crates/sid-widgets/tests/animation_view.rs
expression: s
---
┌ Animation ───────────────────────────────────────────────┐
│Animation                                                 │
│-----------------------------------------                 │
│> * Enabled                  [on]                         │
│  o Density                  30 / 100                     │
│  o FPS                      8 / 30                       │
│  o Supernova idle (secs)    90                           │
│  o Supernova on event       [on]                         │
│  o Glyph set                Cosmos                       │
│                                                          │
│[ Space/Enter: toggle/cycle ]                             │
│[ Left/Right: decrement/increment ]                       │
│[ S: save ]                                               │
└──────────────────────────────────────────────────────────┘
border_top_left: fg=Rgb(212, 65, 65) modifier=NONE
title_first_char: symbol="A" fg=Rgb(230, 230, 240) modifier=BOLD
