crates/sid-widgets/tests/snapshots/animation_view__animation_view_render_unfocused.snap
---
source: crates/sid-widgets/tests/animation_view.rs
expression: s
---
┌ Animation ───────────────────────────────────────────────┐
│> * Enabled                  [on]                         │
│  o Density                  30 / 100                     │
│  o FPS                      8 / 30                       │
│  o Supernova idle (secs)    90                           │
│  o Supernova on event       [on]                         │
│  o Glyph set                Cosmos                       │
│  o Motion style             Cosmos                       │
│                                                          │
│[ Space/Enter: toggle/cycle ]                             │
│[ Left/Right: decrement/increment ]                       │
│[ S: save ]                                               │
│                                                          │
└──────────────────────────────────────────────────────────┘
border_top_left: fg=Rgb(74, 74, 96) modifier=NONE
title_first_char: symbol="A" fg=Rgb(230, 230, 240) modifier=NONE
